--- a/templates/products/products_detail.html
+++ b/templates/products/products_detail.html
@@ -69,16 +69,16 @@
                             <div class="col-12 mx-auto">
                                 <p class="mt-3 aw"><strong>Quantity:</strong></p>
                                 <div class="form-group w-75 aw">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black minus-block rounded-10"
+                                    <div class="input-group ">
+                                        <div class=" input-group-prepend">
+                                            <button class=" decrement-qty btn btn-black minus-block rounded-10"
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
+                                                <span class="icon ">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input border border-secondary " type="number"
+                                        <input class=" form-control qty_input border border-secondary " type="number"
                                             name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}"
                                             id="id_qty_{{ product.id }}">
                                         <div class="input-group-append">
@@ -95,16 +95,19 @@
 
                             <div class="col{% if s %}-12 mt-1{% endif %}">
                                 <button type="submit"
-                                    class="font-weight-bold aw text-wht py-4 px-4 btn btn-outline-black text-uppercase rounded-10 mt-5 bg-primary border-bk">
+                                    class="ripple-surface font-weight-bold aw text-wht py-4 px-4 btn btn-outline-black text-uppercase rounded-10 mt-5 bg-primary border-bk">
                                     Add To cart <i class="fad fa-cart-plus"></i>
                                 </button>
+
                                 <a href="{% url 'products' %}"
-                                    class="p-2 btn btn-outline-black rounded-10 mt-5 bg-warning border-bk">
+                                    class=" p-2 btn btn-outline-black rounded-10 mt-5 bg-warning border-bk ">
                                     <span class="icon">
                                         <i class="fad fa-store"></i>
                                     </span>
                                     <span class="aw bg-warning text-uppercase">Keep Shopping</span>
                                 </a>
+
+
 
 
                             </div>
