--- a/templates/base_partials/_navbar.html
+++ b/templates/base_partials/_navbar.html
@@ -1,5 +1,13 @@
 {% load static %}
 
+
+
+
+
+
+
+
+
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <a href="{% url 'home' %}" class="nav-link main-logo-link">
         <img id="design2" src="{% static 'images/logo.png' %}" alt="" />
@@ -10,57 +18,35 @@
     </button>
 
     <div class="justify-content-center collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="aw navbar-nav mx-3">
-            <li class="nav-item active">
-                {% if request.user.is_authenticated %}
-                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-                {% else %}
-                {% endif %}
-            </li>
-            <li class="nav-item active">
+        <ul class="aw navbar-nav  mx-3">
+
+            <li class="nav-item ">
                 <a class="nav-link" href="{% url 'products' %}">Shop</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item ">
                 <a class="nav-link" href="{% url 'blog:list' %}">Blogs</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item ">
+                <a class="nav-link" href="{% url 'about' %}">About</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+            </li>
+            {% if request.user.is_authenticated %}
+            <li class="nav-item ">
                 <a class="nav-link" href="{% url 'programs:list' %}">Programs</a>
             </li>
-
-            <!-- <li class="nav-item dropdown">
-                <a class="mx-3 text-wht dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    My Dashboard
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-                    {% if request.user.is_authenticated %}
-                    {% if request.user.is_superuser %}
-                    <a class="dropdown-item" href="#">Project Management</a>
-                    {% endif %}
-                    <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
-                    <a class="dropdown-item" href="{% url 'memberships:select-membership' %}">My Memberships</a>
-                    <a class="dropdown-item" href="{% url 'blog:list' %}">Blogs</a>
-
-
-                    {% else %}
-
-                    <a class=" dropdown-item" href="{% url 'account_signup' %}">register</a>
-                    {% endif %}
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'profile' %}">Dashboard</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="mx-3 text-wht nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Pages
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item " href="{% url 'about' %}">About</a>
-                    <a class="dropdown-item" href="{% url 'products' %}">Shop</a>
-                    <a class="dropdown-item" href="{% url 'blog:list' %}">Blog</a>
-                    <a class="dropdown-item" href="{% url 'contact' %}">Contact Us</a>
-                </div>
-            </li> -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+            </li>
+            {% else %}
+            {% endif %}
+
+
+
         </ul>
 
     </div>
