added shipping details own page order history to profile page, styled pass resets

--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -6,11 +6,26 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
-    
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+
+
+
+<div class="empty-pic ">
+    <div class="container about">
+        <div class="overlay">
+            <div class="col p-4">
+
+                <h1 class="aw text-wht text-center">{% trans "Password Reset" %}</h1>
+
+                {% if user.is_authenticated %}
+                {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
+
+                <p class="aw text-wht">{% blocktrans %}We have sent you an e-mail. Please contact us if you do not
+                    receive it within a few
+                    minutes.{% endblocktrans %}</p>
+
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
