--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -4,6 +4,19 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+
+<div class="empty-pic ">
+    <div class="container about">
+        <div class="overlay">
+            <div class="col p-4">
+
+                <h1 class="aw text-wht text-center">{% trans "Change Password" %}</h1>
+                <p class="aw text-wht text-center">{% trans 'Your password is now changed.' %}</p>
+                <a class="aw w-100 btn btn-success" href="{% url 'home' %}">Home</a>
+
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
