--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -5,11 +5,25 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+<div class="empty-pic ">
+    <div class="container about">
+        <div class="overlay">
+            <div class="col p-4">
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+                <h1 class="aw text-wht text-center">{% trans "Set Password" %}</h1>
+
+                <form class="aw text-wht" method="POST" action="{% url 'account_set_password' %}" class="password_set">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <input class="aw text-wht btn btn-primary w-100" type="submit" name="action"
+                        value="{% trans 'Set Password' %}" />
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 {% endblock %}
