--- a/templates/account/signup_closed.html
+++ b/templates/account/signup_closed.html
@@ -5,7 +5,18 @@
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+<div class="empty-pic ">
+    <div class="container about">
+        <div class="overlay">
+            <div class="col p-4">
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+                <h1 class="aw text-wht text-center">{% trans "Sign Up Closed" %}</h1>
+
+                <p class="aw text-wht">{% trans "We are sorry, but the sign up is currently closed." %}</p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
