--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -5,11 +5,25 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
+<div class="empty-pic ">
+    <div class="container about">
+        <div class="overlay">
+            <div class="col p-4">
+
+                <h1 class="aw text-wht text-center">{% trans "Change Password" %}</h1>
+
+                <form class="aw text-wht" method="POST" action="{% url 'account_change_password' %}"
+                    class="password_change">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="aw text-wht" type="submit" name="action">{% trans "Change Password" %}</button>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
