--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,18 +7,34 @@
 
 {% block content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+<div class="empty-pic ">
+    <div class="container about">
+        <div class="overlay">
+            <div class="col p-4">
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+                <h1 class="aw text-wht text-center">{% trans "Password Reset" %}</h1>
+                {% if user.is_authenticated %}
+                {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
+
+                <p class="aw text-wht">
+                    {% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
+                </p>
+
+                <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset aw text-wht">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <input class="aw text-wht btn btn-success w-100" type="submit"
+                        value="{% trans 'Reset My Password' %}" />
+                </form>
+
+                <p class="aw text-wht">{% blocktrans %}Please contact us if you have any trouble resetting your
+                    password.{% endblocktrans %}
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
