--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -4,20 +4,48 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        {% if form %}
-            <form method="POST" action="{{ action_url }}">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
-            </form>
-        {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
-        {% endif %}
-    {% endif %}
+<div class="empty-pic ">
+    <div class="container about">
+        <div class="overlay">
+            <div class="col p-4">
+
+                <h1 class="aw text-wht">
+                    {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+
+                {% if token_fail %}
+                {% url 'account_reset_password' as passwd_reset_url %}
+                <p class="aw text-wht">{% blocktrans %}The password reset link was invalid, possibly because it has
+                    already been used.
+                    Please request a <a class="text-wht" href="{{ passwd_reset_url }}">new password
+                        reset</a>.{% endblocktrans %}</p>
+                {% else %}
+                {% if form %}
+                <form class="aw text-wht" method="POST" action="{{ action_url }}">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <input class="aw text-wht btn btn-warning" type="submit" name="action"
+                        value="{% trans 'Change Password' %}" />
+                </form>
+                {% else %}
+                <p class="aw text-wht">{% trans 'Your password is now changed.' %}</p>
+                {% endif %}
+                {% endif %}
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 {% endblock %}
