--- a/templates/profiles/profile.html
+++ b/templates/profiles/profile.html
@@ -16,7 +16,7 @@
     <div class="container profile">
         <div class="profile-overlay">
             <div class="col p-4">
-                <h4 class="text-wht aw display-4 text-center"> {{ user.username }} Dashboard</h4>
+                <h4 class="text-wht aw display-4 text-center"> {{ user.username|title }} Dashboard</h4>
             </div>
         </div>
         <div class="container">
@@ -40,8 +40,45 @@
                     <div class="profile-overlay"></div>
                 </div>
                 <div class="col-md-3 col-12  bg-black-a rounded-15">
-                    <h5 class="aw text-wht text-center">My Blogs</h5>
-                    <div class="profile-overlay"></div>
+
+                    <h5 class="aw text-primary text-center">Order History</h5>
+                    <!--This the place for for orsers history -->
+                    <div class="profile-overlay border border-white">
+                        {% for order in orders %}
+                        <div class=" p-2 table-responsive">
+                            <table class="table table-sm table-borderless text-wht">
+                                <thead>
+                                    <tr>
+                                        <th>Order</th>
+                                        <th>Date</th>
+                                        <th>Items</th>
+                                        <th>Total</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <a href="{% url 'order_history' order.order_number %}"
+                                                title="{{ order.order_number }}">{{ order.order_number|truncatechars:6 }}
+                                            </a>
+                                        </td>
+                                        <td>{{ order.date|date:"D d M Y" }}</td>
+                                        <td>
+                                            <ul class="list-unstyled">
+                                                <li class="small">
+                                                    {% for item in order.lineitems.all %}
+                                                    {{ item.product.name}} x {{ item.quantity }}
+                                                </li>
+                                                {% endfor %}
+                                            </ul>
+                                        </td>
+                                        <td>{{ order.grand_total }}</td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
