--- a/templates/profiles/profile_details.html
+++ b/templates/profiles/profile_details.html
@@ -16,65 +16,26 @@
 </div>
 <div id="profile-pic">
     <div class="container profile">
-        <div class="profile-overlay">
-            <div class="col p-4">
-                <h1 class="text-wht aw text-center">Shipping / Order History</h1>
-            </div>
+
+        <div class="col p-4">
+            <h1 class="text-ylw aw text-center">Shipping Details</h1>
         </div>
+
         <div class="container">
-            <div class="row">
+            <div class="row d-flex justify-content-center mb-4">
                 <div class="col-md-6 col-12  bg-black-a rounded-15">
-                    <h5 class="aw text-ylw text-center">Shipping details</h5>
+
                     <div class="profile-overlay">
                         <form method="POST" action="" class=" my-2" id="shipping-update-form">
                             {% csrf_token %}
                             {{ form|crispy }}
                             <button type="submit"
                                 class="ripple-surface dark-btn uppercase col-12 aw rounded-10 px-4 py-2">Update
-                                Details</button>
+                                Shipping Details</button>
                         </form>
                     </div>
                 </div>
-                <div class="col-md-6 col-12 bg-black-a rounded-15">
-                    <h5 class="aw text-primary text-center">Order History</h5>
-                    <!--This the place for for orsers history -->
-                    <div class="profile-overlay border border-white">
-                        {% for order in orders %}
-                        <div class=" p-2 table-responsive">
-                            <table class="table table-sm table-borderless text-wht">
-                                <thead>
-                                    <tr>
-                                        <th>Order</th>
-                                        <th>Date</th>
-                                        <th>Items</th>
-                                        <th>Total</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <a href="{% url 'order_history' order.order_number %}"
-                                                title="{{ order.order_number }}">{{ order.order_number|truncatechars:6 }}
-                                            </a>
-                                        </td>
-                                        <td>{{ order.date }}</td>
-                                        <td>
-                                            <ul class="list-unstyled">
-                                                <li class="small">
-                                                    {% for item in order.lineitems.all %}
-                                                    {{ item.product.name}} x {{ item.quantity }}
-                                                </li>
-                                                {% endfor %}
-                                            </ul>
-                                        </td>
-                                        <td>{{ order.grand_total }}</td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+
 
             </div>
         </div>
