added dash-history and overflow-y added ul for User in dash

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -679,6 +679,11 @@ nav {
   overflow-y: auto;
 }
 
+/* Dash Board */
+#dash_history {
+  max-height: 35rem;
+  overflow-y: auto;
+}
 
 /* Footer */
 .footer-image {
