added stylings to program list

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -50,7 +50,7 @@
             <div class="card-body">
                 <h3 class="card-title aw text-center">Programs</h3>
                 {% for program in programs %}
-                <a class="card-text d-block text-center mont_b text-bk"
+                <a class="card-text d-block text-center mont_b text-bk red-hover"
                     href="{% url 'programs:list' %}">{{ program }}</a>
                 {% endfor %}
 
