--- a/templates/profiles/profile.html
+++ b/templates/profiles/profile.html
@@ -53,7 +53,7 @@
                             {% for blog in user_blog %}
 
                             <li>
-                                <p class="text-wht">
+                                <p class="text-wht text-center">
                                     <a href="{{ blog.get_absolute_url }}">{{ blog.title|title }}</a><br>
                                     <small><span class="text-grn">{{ blog.category }}</span></small>
                                     <small><span class="text-red"> / </span></small>
