--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,13 @@ ul {
   list-style-type: none;
 }
 
+img {
+  object-fit: cover;
+}
+
+
+
+
 .message {
   position: absolute;
   top: 3 rem;
@@ -122,6 +129,11 @@ ul {
 
 .spaces-3 {
   height: 4rem;
+}
+
+.red-hover:hover {
+  color: rgb(231, 49, 63);
+  text-decoration: none;
 }
 
 .rounded-10 {
@@ -230,9 +242,15 @@ ul {
   margin: 2%;
 }
 
+.navbar-collapse {
+  background-color: rgba(0, 0, 0, 0.788);
+  padding-bottom: 10px;
+}
+
 .navbar-dark .navbar-toggler {
   color: rgba(255, 255, 255, 1);
-  border-color: rgba(255, 255, 255, 1);
+
+
 }
 
 .navbar-dark .navbar-toggler-icon {
@@ -616,6 +634,16 @@ nav {
   -o-background-size: cover;
   background-size: cover;
 }
+
+/*Programs*/
+
+.program-card {
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+}
+
+
 
 /*Profile pages*/
 #profile-pic {
