--- a/templates/programs/program_list.html
+++ b/templates/programs/program_list.html
@@ -14,33 +14,24 @@
             </div>
         </div>
         <div class="container">
-            <div class="row">
-                <div class="card-group">
-
-
-                    {% for object in object_list  %}
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+            {% for object in object_list  %}
+            <div class=" mx-auto card mb-3" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="{{ object.thumbnail.url }}" class="card-img program-card" alt="...">
+                    </div>
+                    <div class="col-md-8">
                         <div class="card-body">
                             <a href="{{ object.get_absolute_url }}">
-                                <h5 class="card-title">{{ object }}</h5>
+                                <h5 class="text-center aw card-title">{{ object }}</h5>
                             </a>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This card has even longer content than the first to show that equal
-                                height action.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                            <p class="text-center card-text">{{ object.description|truncatechars:50 }}</p>
+
                         </div>
                     </div>
-                    {% endfor %}
-                </div>
-                <div class="col-md-12 col-12  bg-black-a rounded-15">
-                    <a href="{{ object.get_absolute_url }}">
-                        <h5 class="aw text-wht text-center">{{ object }}</h5>
-                    </a>
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
 </div>
