--- a/templates/programs/program_list.html
+++ b/templates/programs/program_list.html
@@ -15,7 +15,58 @@
         </div>
         <div class="container">
             {% for object in object_list  %}
-            <div class=" mx-auto card mb-3" style="max-width: 540px;">
+            {% if not forloop.counter|divisibleby:2  %}
+            <div class="  mx-auto row featurette profile-overlay" style="max-width: 40rem;">
+                <div class="col-md-7">
+                    <a href="{{ object.get_absolute_url }}">
+                        <h5 class="text-center aw card-title">{{ object }}</h5>
+                        <p class="text-center card-text">{{ object.description|truncatechars:50 }}</p>
+                    </a>
+                </div>
+                <div class="col-md-5">
+                    <img src="{{ object.thumbnail.url }}" class="card-img program-card" alt="...">
+                </div>
+            </div>
+
+            <hr class="featurette-divider">
+
+            {% else %}
+            <div class="row  mx-auto featurette  profile-overlay" style="max-width: 40rem;">
+                <div class="col-md-5">
+                    <img src="{{ object.thumbnail.url }}" class="card-img program-card" alt="...">
+                </div>
+                <div class="col-md-7">
+                    <a href="{{ object.get_absolute_url }}">
+                        <h5 class="text-center aw card-title">{{ object }}</h5>
+                        <p class="text-center card-text">{{ object.description|truncatechars:50 }}</p>
+                    </a>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+            {% endif %}
+            {% endfor %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <!-- <div class=" mx-auto card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
                         <img src="{{ object.thumbnail.url }}" class="card-img program-card" alt="...">
@@ -31,11 +82,29 @@
                     </div>
                 </div>
             </div>
-            {% endfor %}
+            {% else %}
+            <div class=" mx-auto card mb-3" style="max-width: 540px;">
+                <div class="row no-gutters">
+
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <a href="{{ object.get_absolute_url }}">
+                                <h5 class="text-center aw card-title">{{ object }}</h5>
+                            </a>
+                            <p class="text-center card-text">{{ object.description|truncatechars:50 }}</p>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="{{ object.thumbnail.url }}" class="card-img program-card" alt="...">
+                    </div>
+                </div>
+            </div> -->
+
         </div>
     </div>
 </div>
-{% else %}
+{% endif %}
 
 
 <div id="about-pic">
@@ -65,15 +134,5 @@
     </div>
 </div>
 
-{% endif %}
-{% endblock content %}
 
-<!-- <div class="container-fluid bg-black fixed-top crumbs">
-    <div class="row">
-        <div class="col-md-12 mb-0">
-            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <strong class="text-wht aw">Dashboard</strong>
-        </div>
-    </div>
-</div> -->
+{% endblock content %}
