--- a/templates/blog/blog_categories.html
+++ b/templates/blog/blog_categories.html
@@ -2,16 +2,22 @@
 
 
 {% block content %}
-<div class="container-fluid bg-black fixed-top crumbs">
+<div class="container-fluid bg-black fixed-top fixed-top crumbs">
     <div class="row">
         <div class="col-md-12 mb-0">
-            <a class="text-wht aw pl-2" href="{% url 'blog:list' %}">Blogs</a>
+            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
             <span class="mx-2 mb-0 text-wht">/</span>
-            <strong class="text-wht aw">Blog</strong>
+            <strong class="text-wht aw">Blogs</strong>
+            {% if request.user.is_authenticated %}
+            <span class="mx-2 mb-0 text-wht">/</span>
+            <a class="text-wht aw pl-2" href="{% url 'blog:create' %}">Create Blog</a>
+            {% else %}
+            {% endif %}
         </div>
     </div>
 </div>
 {% if category_blogs %}
+<!-- Page Content -->
 <div class="container-fluid blog-pic">
     <div class="row mx-4">
         <!-- Blog Entries Column -->
@@ -19,15 +25,16 @@
             <div class="overlay">
                 <h1 class="my-4 aw text-wht text-center">{{ category }} Blogs</h1>
             </div>
+
             {% for blog in category_blogs %}
             <!-- Blog Post -->
             <a href="{{ blog.get_absolute_url }}" class="text-bk">
                 <div class="card mb-4">
                     <img class="card-img-top" src="{{ blog.thumbnail.url }}" alt="Card image cap">
                     <div class="card-body">
-                        <h2 class="aw card-title">{{ blog.title|title }}</h2>
+                        <h2 class="aw text-center card-title">{{ blog.title|title }}</h2>
                         <small class="text-muted">{{ blog.category }}</small>
-                        <p class="card-text">{{ blog.content|truncatechars:200 }}</p>
+                        <p class="card-text">{{ blog.content|safe|truncatechars:200 }}</p>
                         <div class="row m-1">
                             <div class="col-md-4 col-sm-12"><span><i class="fad fa-eye"></i>
                                     {{ blog.get_view_count }}</span></div>
@@ -41,53 +48,101 @@
         <div class="card-footer text-muted">
             Posted on: {{ blog.publish_date}} by <strong>{{ blog.author|title }}</strong>
         </div>
+    </div>
 
+    {% endfor %}
+    <!-- 
+    <!-- Pagination -->
+    <ul class="pagination justify-content-center mb-4">
+        <li class="page-item">
+            <a class="page-link" href="#">&larr; Older</a>
+        </li>
+        <li class="page-item disabled">
+            <a class="page-link" href="#">Newer &rarr;</a>
+        </li>
+    </ul>
 
-        {% endfor %}
+</div>
 
-        <div class="card my-4">
-            <h5 class="aw card-header">Categories</h5>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <ul class="list-unstyled mb-0">
-                            {% for blog in object_list %}
+<!-- Sidebar Widgets Column -->
+<div class="col-md-4">
 
-                            <li>
-                                <a href="#">{{blog.category}}</a>
-                            </li>
-                            {% endfor %}
-
-                        </ul>
-                    </div>
-
-                </div>
+    <!-- Search Widget -->
+    <div class="card my-4">
+        <h5 class="aw card-header">Search</h5>
+        <div class="card-body">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search for...">
+                <span class="input-group-append">
+                    <button class="aw  btn btn-secondary" type="button">Go!</button>
+                </span>
             </div>
         </div>
-        {% else %}
-        <div id="about-pic">
-            <div class="container about">
-                <div class="overlay">
-                    <div class="col p-4">
-                        <p class="text-wht aw display-3 text-center">Focus Fitness</p>
-                        <h3 class="text-wht text-center">We have no Blogs in this Categorry</h3>
-                        <div class="row d-flex flex-row">
-                            <div class="col-12">
-                                <span>
-                                    <a class=" my-2 w-100 text-wht aw px-4 btn btn-warning"
-                                        href="{% url 'blog:list' %}">Back to Blogs</a>
-                                </span>
-                                <span>
-                                    <a class="my-2 w-100 text-wht aw px-4 btn btn-success"
-                                        href="{% url 'home' %}">Home</a>
-                                </span>
+    </div>
 
-                            </div>
+    <!-- Categories Widget -->
+    <div class="card my-4">
+        <h5 class="aw card-header">Categories</h5>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-lg-6">
+                    <ul class="list-unstyled mb-0">
+                        {% for item in category_menu %}
+                        <a class="dropdown-item aw" href="{% url 'blog:category' item %}">{{ item }}</a>
+                        {% endfor %}
 
-                        </div>
-                    </div>
+                    </ul>
                 </div>
+
             </div>
         </div>
+    </div>
+    <!-- Side Widget -->
+    <div class="card my-4 ">
+        <h5 class="aw card-header text-bk text-center">All Blogs</h5>
+        {% for blog in all_blogs %}
+        {% if blog.category != category %}
+        <div class="card-body ">
+            <a class="text-bk" href="{{ object.get_absolute_url }}">
+                <h5 class="aw text-center ">{{ blog.title|title }}</h5>
+                <a href="{% url 'blog:category' blog.category %}"><small class="text-muted">Category:
+                        {{ blog.category }}</small></a>
+                <p class="text-bk">{{ blog.content|safe|truncatechars:50 }}</p>
+            </a>
+        </div>
+        <hr>
         {% endif %}
-        {% endblock content %}
+        {% endfor %}
+    </div>
+</div>
+{% else %}
+<div id="about-pic">
+    <div class="container about">
+        <div class="overlay">
+            <div class="col p-4">
+                <p class="text-wht aw display-3 text-center">Focus Fitness</p>
+                <h3 class="text-wht text-center">We have no Blogs in this Categorry</h3>
+                <div class="row d-flex flex-row">
+                    <div class="col-12">
+                        <span>
+                            <a class=" my-2 w-100 text-wht aw px-4 btn btn-warning" href="{% url 'blog:list' %}">Back to
+                                Blogs</a>
+                        </span>
+                        <span>
+                            <a class="my-2 w-100 text-wht aw px-4 btn btn-success" href="{% url 'home' %}">Home</a>
+                        </span>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
+
+
+
+
+
+{% endblock content %}
